--- a/mysql-sealedsecret.yaml
+++ b/mysql-sealedsecret.yaml
@@ -2,7 +2,7 @@ apiVersion: bitnami.com/v1alpha1
 kind: SealedSecret
 metadata:
   creationTimestamp: null
-  name: mysql-secret1
+  name: mysql-secret
   namespace: default
 spec:
   encryptedData:
